@@ -1,3 +1,5 @@
-Project home page: http://www.source-code.biz/MiniTemplator
-
 MiniTemplator is a compact template engine for HTML files.
+This is the README for the Java version of MiniTemplator.
+MiniTemplator is also available in PHP and Visual Basic (VB/VBA).
+
+Project home page: http://www.source-code.biz/MiniTemplator
